reduced th last issue